--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     text {
       text-anchor: middle;
       font-size: 70px;
-      dominant-baseline: middle;
     }
 
     text.answer {
@@ -136,8 +135,8 @@
       <rect x="-100" y="-100" width="1470" height="890" class="cover"/>
       <g transform="translate(35,250)">
         <rect x="0" y="0" width="1200" height="200" class="box"/>
-        <text text-anchor="middle" dominant-baseline="middle" x="600" y="80">BLOCKBUSTERS</text>
-        <text text-anchor="middle" dominant-baseline="middle" x="600" y="170" class="sub">
+        <text text-anchor="middle" dy=".35em" x="600" y="80">BLOCKBUSTERS</text>
+        <text text-anchor="middle" dy=".25em" x="600" y="170" class="sub">
           Technology and Data Special Edition
         </text>
       </g>
@@ -191,12 +190,14 @@
       const qn = document.createElementNS(svgns, 'text');
       qn.setAttribute('x', '60');
       qn.setAttribute('y', '45');
+      qn.setAttribute('dy', '.35em');
       qn.innerHTML = qnLetter;
       e.appendChild(qn);
       const ans = document.createElementNS(svgns, 'text');
       ans.setAttribute('class', 'answer');
       ans.setAttribute('x', '60');
       ans.setAttribute('y', '45');
+      ans.setAttribute('dy', '.25em');
       ans.innerHTML = answer;
       e.appendChild(ans);
     }
