update letters and answers

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     text.answer {
       font-family: 'Helvetica Neue', 'Arial Nova', sans-serif;
-      font-size: 18px;
+      font-size: 20px;
       fill: white;
       opacity: 0;
     }
@@ -236,14 +236,14 @@
 
     // Map from placeholder letters above to question letters to display
     const qnMap = {
-      A: "P", B: "O", C: "C", D: "R", E: "A", F: "B",
-      G: "G", H: "L", I: "M", J: "S", K: "D", L: "W"
+      A: "P", B: "O", C: "C", D: "R", E: "E", F: "I",
+      G: "D", H: "A", I: "W", J: "U", K: "M", L: "F"
     };
 
     // Map from placeholder letters above to answers for questions to display
     const ansMap = {
-      A: "Platforms", B: "Operations", C: "CMDB", D: "Roadmaps", E: "Apples", F: "Bananas",
-      G: "Grapes", H: "Lemon", I: "Mango", J: "Satsumas", K: "Dragonfruit", L: "Watermelon",
+      A: "Platforms", B: "Operations", C: "CMDB", D: "Roadmaps", E: "EDP", F: "Insight",
+      G: "Data", H: "Automation", I: "Wikis", J: "UI/UX", K: "Mobile", L: "FERN",
     };
 
     // add left/right borders
